Bug 407662 - breeze dark: "Advanced permissions" window has almost invisible icons
Summary: breeze dark: "Advanced permissions" window has almost invisible icons
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: Icons (other bugs)
Version First Reported In: 5.15.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: visual-bugs-null
URL:
Keywords:
Depends on: 407782
Blocks:
  Show dependency treegraph
 
Reported: 2019-05-17 20:20 UTC by Patrick Silva
Modified: 2019-08-04 03:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.62
Sentry Crash Report:


Attachments
screenshot (46.73 KB, image/png)
2019-05-17 20:20 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-05-17 20:20:04 UTC
Created attachment 120145 [details]
screenshot

STEPS TO REPRODUCE
0. set breeze dark look and feel theme
1. open kicker/kickoff
2. right click on any app, select "Edit application..."
3. select "Permissions" tab, click "Advanced permissions" button

OBSERVED RESULT
Some icons are almost invisible, see the screenshot.

EXPECTED RESULT
all icons have good visiblility

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.90
KDE Frameworks Version: 5.58.0
Qt Version: 5.13.0 beta3
Comment 1 Nate Graham 2019-05-20 23:27:25 UTC
Gross, this uses its own images in kio:src/widgets/images rather than images from any icon theme. Most of that code in kio:src/widgets/kacleditwidget.cpp and kio:src/widgets/kacleditwidget_p.h can just be ripped out, but first we'd need Breeze icons to use instead. For that, I've filed Bug 407782.
Comment 2 Nate Graham 2019-08-03 02:19:32 UTC
Working on a patch to fix this.
Comment 3 Nate Graham 2019-08-03 02:30:59 UTC
Patch: https://phabricator.kde.org/D22905
Comment 4 Nate Graham 2019-08-04 03:08:48 UTC
Git commit 100fb70e6162d15fdc15fd2c76937435113a129e by Nate Graham.
Committed on 04/08/2019 at 03:08.
Pushed by ngraham into branch 'master'.

[Permissions editor] Port icons to use QIcon::fromTheme()

Summary:
The permissions editor was using custom low-resolution pixmaps, which did not respect
the icon theme or color scheme and frequently just looked bad, including with a high
DPI screen or when using a dark theme.

This patch ports it to use icons from the active icon theme using `QIcon::fromTheme()`.
FIXED-IN: 5.62

Test Plan:
All functionality still works.

Looks better, especially with Breeze icons, a dark color scheme, and a high DPI scale
factor: {F7144856}

Reviewers: #frameworks, cfeck, davidedmundson

Reviewed By: davidedmundson

Subscribers: davidedmundson, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D22905

D  +-    --    src/widgets/images/group-grey.png
D  +-    --    src/widgets/images/group.png
D  +-    --    src/widgets/images/mask.png
D  +-    --    src/widgets/images/others-grey.png
D  +-    --    src/widgets/images/others.png
D  +-    --    src/widgets/images/user-grey.png
D  +-    --    src/widgets/images/user.png
D  +-    --    src/widgets/images/yes.png
D  +-    --    src/widgets/images/yespartial.png
M  +29   -47   src/widgets/kacleditwidget.cpp
M  +1    -13   src/widgets/kacleditwidget_p.h

https://commits.kde.org/kio/100fb70e6162d15fdc15fd2c76937435113a129e