[Permissions editor] Port icons to use QIcon::fromTheme()

Summary:
The permissions editor was using custom low-resolution pixmaps, which did not respect
the icon theme or color scheme and frequently just looked bad, including with a high
DPI screen or when using a dark theme.

This patch ports it to use icons from the active icon theme using `QIcon::fromTheme()`.

BUG: 407662
FIXED-IN: 5.62

Test Plan:
All functionality still works.

Looks better, especially with Breeze icons, a dark color scheme, and a high DPI scale
factor: {F7144856}

Reviewers: #frameworks, cfeck, davidedmundson

Reviewed By: davidedmundson

Subscribers: davidedmundson, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D22905